# glmap

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  pylint.yml  python-package.yml  python-publish.yml  test-python-publish.yml
config/: action_to_activity.json
data/actions/: gh_all_actions.jsonl
data/activities/: gh_all_activities.jsonl
data/raw-events/: gh_events_202491.json  gh_events_202492.json  gh_events_202493.json
ghamap/: cli.py
ghamap/mapping/: action_mapper.py
ghamap/preprocess/: event_processor.py
ghmap/: cli.py  utils.py
ghmap/config/: action_to_activity.json  event_to_action.json  gl_action_to_activity.json  gl_event_to_action.json
ghmap/mapping/: action_mapper.py  activity_mapper.py
ghmap/preprocess/: event_processor.py
src/: cli.py
src/mapping/: action_mapper.py  activity_mapper.py  event_mapper.py
src/preprocess/: event_processor.py
tests/: test_cli.py
tests/data/: custom-action-to-activity.json  custom-event-to-action.json  custom-expected-actions.jsonl  custom-expected-activities.jsonl  custom-sample-events.json  expected-actions.jsonl  expected-activities.jsonl  sample-events.json
