[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghmap"
version = "1.0.0"
license = { text = "MIT License" }
authors = [{ name = "Youness Hourri", email = "youness.hourri@umons.ac.be" }]
description = "GitHub event mapping tool"
readme = { file = "README.md", content-type = "text/markdown" }
urls = { Homepage = "https://github.com/uhourri/ghmap" }
requires-python = ">= 3.10"
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
  "tqdm"
]

[project.scripts]
ghmap = "ghmap.cli:main"

[tool.setuptools]
packages = ["ghmap", "ghmap.preprocess", "ghmap.mapping", "ghmap.config"]

[tool.setuptools.package-data]
ghmap = ["event_to_action.json", "action_to_activity.json"]