[build-system]
requires = ["setuptools >= 62.6", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glmap"
version = "1.0.6"
license = { text = "MIT License" }
authors = [{ name = "Cyril Moreau", email = "cyril.moreau@umons.ac.be" }]
description = "GitLab event mapping tool"
readme = { file = "README.md", content-type = "text/markdown" }
urls = { Homepage = "https://github.com/MrRose765/glmap" }
requires-python = ">= 3.10"
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
glmap = "ghmap.cli:main"

[tool.setuptools]
packages = ["ghmap", "ghmap.preprocess", "ghmap.mapping"]

[tool.setuptools.package-data]
ghmap = ["config/gl_event_to_action.json", "config/gl_action_to_activity.json"]

[tool.coverage.run]
branch = true
source = ["ghmap"]
omit = [
    "*/__init__.py",
]
patch = ["subprocess"]
